[package]
name = "kt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
zstd = "0.11.2"

itertools = "0.10.5"
aho-corasick = "0.7.19"
ndarray = "0.15.6"
rand = { version = "0.8.5", features = ["small_rng"] }

clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

unicode-normalization = "0.1.22"
unicode-bidi = "0.3.8"
